# cmakegradlehelloworld

./: .gitignore  CMakeLists.txt  README.md  build.gradle
gradle/wrapper/: gradle-wrapper.properties
